--- a/Curs8 MVC/Curs8 MVC.csproj
+++ b/Curs8 MVC/Curs8 MVC.csproj
@@ -171,6 +171,8 @@
     <Compile Include="Controllers\EvaluationController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="CustomAttributes\MaxWordsAttribute.cs" />
+    <Compile Include="CustomAttributes\MinWordsAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
